# plasma-mycroft

./: .arcconfig  CMakeLists.txt  DaveBlock.qml  PACKAGING.readme  README.md  Readme.md  daveblocktest.qml
app/: CMakeLists.txt  main.cpp
icons/: CMakeLists.txt
miniplasmoid/: Messages.sh  metadata.desktop
miniplasmoid/contents/ui/: FullRepresentation.qml  main.qml
mycroft/: mycroft.conf
mycroft/skills/mycroft-activities-plasma-skill/: .directory  README.md  __init__.py
mycroft/skills/mycroft-activities-plasma-skill/dialog/en-us/: activities.create.dialog  activities.remove.dialog  activities.show.dialog  activities.stop.dialog  activities.switch.dialog
mycroft/skills/mycroft-activities-plasma-skill/test/intent/: sample1.intent.json  sample2.intent.json  sample3.intent.json  sample4.intent.json  sample5.intent.json
mycroft/skills/mycroft-activities-plasma-skill/vocab/en-us/: ActivitiesCreateKeyword.voc  ActivitiesRemoveKeyword.voc  ActivitiesShowKeyword.voc  ActivitiesStopKeyword.voc  ActivitiesSwitchKeyword.voc
mycroft/skills/mycroft-amarok-player-plasma-skill/: README.md  __init__.py
mycroft/skills/mycroft-amarok-player-plasma-skill/dialog/en-us/: amarok.next.dialog  amarok.pause.dialog  amarok.play.dialog  amarok.previous.dialog  amarok.stop.dialog
mycroft/skills/mycroft-amarok-player-plasma-skill/test/intent/: sample1.intent.json  sample2.intent.json  sample3.intent.json  sample4.intent.json  sample5.intent.json
mycroft/skills/mycroft-amarok-player-plasma-skill/vocab/en-us/: AmarokNextKeyword.voc  AmarokPauseKeyword.voc  AmarokPlayKeyword.voc  AmarokPreviousKeyword.voc  AmarokStopKeyword.voc
mycroft/skills/mycroft-internals-plasma-skill/: .directory  README.md  __init__.py
mycroft/skills/mycroft-internals-plasma-skill/dialog/en-us/: internals.lock.dialog  internals.logout.dialog  internals.switchuser.dialog
mycroft/skills/mycroft-internals-plasma-skill/test/intent/: sample1.intent.json  sample2.intent.json  sample3.intent.json
mycroft/skills/mycroft-internals-plasma-skill/vocab/en-us/: InternalLockDesktopKeyword.voc  InternalLogoutDesktopKeyword.voc  InternalSwitchUserKeyword.voc
mycroft/skills/mycroft-krunner-skill/: .directory  README.md  __init__.py
mycroft/skills/mycroft-krunner-skill/dialog/en-us/: krunner.recent.dialog  krunner.search.dialog
mycroft/skills/mycroft-krunner-skill/test/intent/: sample1.intent.json  sample2.intent.json
mycroft/skills/mycroft-krunner-skill/vocab/en-us/: KrunnerPlasmaDesktopSkillKeyword.voc  RecentFileKeyword.voc
mycroft/skills/mycroft-sendSMS-plasma-skill/: .directory  README.md  __init__.py  sendSMS.py
mycroft/skills/mycroft-sendSMS-plasma-skill/dialog/en-us/: sendSMS.state.dialog
mycroft/skills/mycroft-sendSMS-plasma-skill/test/intent/: sample1.intent.json
mycroft/skills/mycroft-sendSMS-plasma-skill/vocab/en-us/: SendSMSPlasmaDesktopSkillKeyword.voc
plasmoid/: metadata.desktop
plasmoid/contents/code/: fallback.css  maps.css  msm.sh  pkgstartservice.sh  pkgstopservice.sh  startservice.sh  stopservice.sh
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/images/: .directory
plasmoid/contents/ui/: Applet.js  AskMessageDelegate.qml  AskMessageType.qml  AskMessageTypeMenu.qml  AudioFileDelegate.qml  Autocomplete.js  AutocompleteBox.qml  BookDelegate.qml  BookType.qml  BottomBarViewComponent.qml  Conversation.js  ConversationDelegate.qml  ConversationLogic.js  ConversationView.qml  CrypCurModel.qml  CurModel.qml  CurrentWeatherDelegate.qml  CurrentWeatherType.qml  CustomIndicator.qml  CustomMicIndicator.qml  DashCryptoDelegate.qml  DashNewsDelegate.qml  DashWeatherDelegate.qml  Dashboard.js  DashboardDelegate.qml  DashboardType.qml  Disclaimer.qml  DisclaimerCardDelegate.qml  DocumentFileDelegate.qml  FallbackWebSearchDelegate.qml  FallbackWebSearchType.qml  FullRepresentation.qml  HintsModel.qml  HintsView.qml  HintsViewComponent.qml  ImgRecogDelegate.qml  ImgRecogType.qml  LeftBarAnim.qml  LoaderDelegate.qml  LoaderType.qml  (+39 more)
plasmoid/contents/ui/config/: configGeneral.qml
plugin/: CMakeLists.txt  Messages.sh  connectioncheck.cpp  connectioncheck.h  filereader.cpp  filereader.h  launchapp.cpp  launchapp.h  msmapp.cpp  msmapp.h  mycroftPlasmoid.notifyrc  mycroftplasmoid_dbus.cpp  mycroftplasmoid_dbus.h  mycroftplasmoidplugin.cpp  mycroftplasmoidplugin.h  notify.cpp  notify.h  qmldir  wsocket.cpp  wsocket.h
